fix: don't take too much space

--- a/src/styles.css
+++ b/src/styles.css
@@ -383,7 +383,6 @@ h1 {
   border-radius: 30px;
   box-shadow: var(--shadow-soft);
   padding: 1.1rem;
-  min-height: 22rem;
   overflow: hidden;
 }
 
